src/snapshots/fermat__layout_fun__layout_fun_tests__apposition.snap
---
source: src/layout_fun.rs
expression: "LayoutFun::apposition(LayoutFun::text(\"foo\", 3, config),\n                      LayoutFun::text(\"bar\", 3, config), config).to_vec()"
---
[
    (
        0,
        Layout {
            layout_expr: Apposition(
                Text(
                    "foo",
                    3,
                ),
                Text(
                    "bar",
                    3,
                ),
            ),
            span: 6,
            height: 1,
            cost: 0,
            cost_gradient: 0,
        },
    ),
    (
        2,
        Layout {
            layout_expr: Apposition(
                Text(
                    "foo",
                    3,
                ),
                Text(
                    "bar",
                    3,
                ),
            ),
            span: 6,
            height: 1,
            cost: 0,
            cost_gradient: 100,
        },
    ),
    (
        5,
        Layout {
            layout_expr: Apposition(
                Text(
                    "foo",
                    3,
                ),
                Text(
                    "bar",
                    3,
                ),
            ),
            span: 6,
            height: 1,
            cost: 300,
            cost_gradient: 100,
        },
    ),
]
