src/snapshots/fermat__layout_fun__layout_fun_tests__from_layout_expr_max_choice_nest_level.snap
---
source: src/layout_fun.rs
expression: "LayoutFun::from_layout_expr(&expr, config).to_vec()"
---
[
    (
        0,
        Layout {
            layout_expr: Stack(
                Text(
                    "foo",
                    3,
                ),
                Text(
                    "bar",
                    3,
                ),
            ),
            span: 3,
            height: 2,
            cost: 1,
            cost_gradient: 0,
        },
    ),
    (
        7,
        Layout {
            layout_expr: Stack(
                Text(
                    "foo",
                    3,
                ),
                Text(
                    "bar",
                    3,
                ),
            ),
            span: 3,
            height: 2,
            cost: 1,
            cost_gradient: 20000,
        },
    ),
]
