src/snapshots/fermat__layout_fun__layout_fun_tests__height_cost_oneline.snap
---
source: src/layout_fun.rs
expression: "LayoutFun::height_cost(LayoutFun::text(\"foo\", config), config).to_vec()"
---
[
    (
        0,
        Layout {
            layout_expr: Text(
                "foo",
            ),
            span: 3,
            height: 1,
            cost: 0,
            cost_gradient: 0,
        },
    ),
    (
        1,
        Layout {
            layout_expr: Text(
                "foo",
            ),
            span: 3,
            height: 1,
            cost: 0,
            cost_gradient: 100,
        },
    ),
]
