src/snapshots/fermat__layout_fun__layout_fun_tests__height_cost_two_lines.snap
---
source: src/layout_fun.rs
expression: "LayoutFun::height_cost(LayoutFun::stack(LayoutFun::text(\"foo\", config),\n                                        LayoutFun::text(\"bar\", config),\n                                        config), config).to_vec()"
---
[
    (
        0,
        Layout {
            layout_expr: Stack(
                Text(
                    "foo",
                ),
                Text(
                    "bar",
                ),
            ),
            span: 3,
            height: 2,
            cost: 10001,
            cost_gradient: 0,
        },
    ),
    (
        1,
        Layout {
            layout_expr: Stack(
                Text(
                    "foo",
                ),
                Text(
                    "bar",
                ),
            ),
            span: 3,
            height: 2,
            cost: 10001,
            cost_gradient: 200,
        },
    ),
]
