src/snapshots/fermat__layout_fun__layout_fun_tests__multi_line_cost_oneline.snap
---
source: src/layout_fun.rs
expression: "LayoutFun::multi_line_cost(LayoutFun::text(\"foo\", 3, config), config).to_vec()"
---
[
    (
        0,
        Layout {
            layout_expr: Text(
                "foo",
                3,
            ),
            span: 3,
            height: 1,
            cost: 0,
            cost_gradient: 0,
        },
    ),
    (
        2,
        Layout {
            layout_expr: Text(
                "foo",
                3,
            ),
            span: 3,
            height: 1,
            cost: 0,
            cost_gradient: 100,
        },
    ),
]
